# WeeklyARTS

./: README.md
2018_10_1/: README.md  any.md  json.md
2018_10_2/: QtOpenGL101.md  README.md
2018_10_3/: QtContainers.md  README.md  RangeV3.md
2018_10_4/: InheritanceAndVariant.md  NamedParameterIdiom.md  README.md
2018_11_1/: CppInitialization.md  ExplodingTuple.md  README.md
2018_11_2/: EventDispatch.md  README.md  constexpr.md
2018_11_3/: ACCU2086.md  Observer.md  README.md
2018_11_4/: README.md  StructVSDBInterface.md  tmp.md
2018_11_5/: README.md  enumerate.md  pybind11.md
2018_12_1/: AboutCppCoro.md  GCE.md  README.md  leetcode494.md  vcpkg_from_git_svn.md
2018_12_2/: Algorithm.md  DP.md  README.md  VcUserPyd.md  pybind11_fn_return_value_policy.md
2018_12_3/: NamedParameter.md  PyPackage.md  README.md
2018_12_4/: FlipModel.md  README.md  concepts.md
2018_6_3/: README.md
2018_6_4/: 827_MakingALargeIsland.md  AIdeaAboutLearningTechnique.md  CppPackageManager.md  README.md  RuleOfZero.md  list.md
2018_7_1/: README.md  VariadicCRTP.md  WhyCppSucks.md
2018_7_2/: Cpp17_p0305r1.md  Delegatethis.md  LambdaHackery.md  README.md  conditional_t.md
2018_7_3/: 3SumClosest.md  ADL.md  README.md
2018_7_4/: README.md  TMP_Iteration.md  TODO.md  string_view.md
2019/April/week1/sphinx_cmake/: CMakeLists.txt  README.rst
2019/April/week1/sphinx_cmake/cmake/: sphinx_conf.py.in
2019/April/week1/sphinx_cmake/docs/: example.rst  index.rst  intro.rst
2019/April/week1/sphinx_cmake/examples/: script.py
2019/February/week3/Qt-CMake/: CMakeLists.txt  MainWindow.cpp  MainWindow.hpp  main.cpp
(+133 files in other folders)
